RESOLVED FIXED275261
BitWarden hits exception calling tabs.executeScript() with both 'allFrames' and 'frameId'
https://bugs.webkit.org/show_bug.cgi?id=275261
Summary BitWarden hits exception calling tabs.executeScript() with both 'allFrames' a...
Timothy Hatcher
Reported 2024-06-07 11:28:33 PDT
[Error] Unhandled Promise Rejection: Error: Invalid call to tabs.executeScript(). The 'details' value is invalid, because it cannot specify both 'allFrames' and 'frameId'. They pass `false` for `allFrames`, and that seems like it should be allowed with `frameId` since it is no different from leaving out `allFrames`.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-06-07 11:28:41 PDT
Kiara Rose
Comment 2 2024-06-07 14:26:06 PDT
EWS
Comment 3 2024-06-07 19:38:02 PDT
Committed 279848@main (a3163cea760c): <https://commits.webkit.org/279848@main> Reviewed commits have been landed. Closing PR #29637 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.