BitWarden hits exception calling tabs.executeScript() with both 'allFrames' and 'frameId' https://bugs.webkit.org/show_bug.cgi?id=275261 rdar://129408886

Reviewed by Timothy Hatcher.

Only throw an exception if the value passed to allFrames is true, and frameId(s) has a value.

* Source/WebKit/WebProcess/Extensions/API/Cocoa/WebExtensionAPIScriptingCocoa.mm:
(WebKit::WebExtensionAPIScripting::validateTarget):
* Source/WebKit/WebProcess/Extensions/API/Cocoa/WebExtensionAPITabsCocoa.mm:
(WebKit::WebExtensionAPITabs::parseScriptOptions):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebExtensionAPIScripting.mm:
(TestWebKitAPI::TEST(WKWebExtensionAPIScripting, ErrorsExecuteScript)):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebExtensionAPITabs.mm:
(TestWebKitAPI::TEST(WKWebExtensionAPITabs, Errors)):

Canonical link: https://commits.webkit.org/279848@main