Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebExtensionAPITabs.mm
@@ -2207,6 +2207,8 @@ TEST(WKWebExtensionAPITabs, ExecuteScript)
         @"    results = await browser.tabs.executeScript(tabId, { allFrames: false, code: \"document.body.style.background = 'pink'\" })",
         @"    browser.test.assertEq(results[0], 'pink')",
 
+        @"    browser.test.assertSafeResolve(() => browser.tabs.executeScript(tabId, { allFrames: false, frameId: 0, file: 'executeScript.js' }))",
+
         @"    browser.test.notifyPass()",
         @"  }",
         @"})",
